--- a/BlueberrySmoothie/BlueBerrySmoothie/Config.xcconfig
+++ b/BlueberrySmoothie/BlueBerrySmoothie/Config.xcconfig
@@ -8,4 +8,4 @@
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
 
-API_KEY = 
+API_KEY = B%2FSwHGsQuvan%2F%2Fs6M6QvZooclQm9QpSHe%2BqbWjT4xPwDgHNXOES93T9i1%2BDKEJPWfCgcTf12X64bS9A42fFRkA%3D%3D
