--- a/BlueberrySmoothie/BlueBerrySmoothie/Info.plist
+++ b/BlueberrySmoothie/BlueBerrySmoothie/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>API_KEY</key>
 	<string>$(API_KEY)</string>
+	<key>NSWidgetWantsToUpdateOnLockScreen</key>
+	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
