--- a/BlueberrySmoothie/BlueBerrySmoothie/Info.plist
+++ b/BlueberrySmoothie/BlueBerrySmoothie/Info.plist
@@ -4,13 +4,13 @@
 <dict>
 	<key>API_KEY</key>
 	<string>$(API_KEY)</string>
-	<key>NSWidgetWantsToUpdateOnLockScreen</key>
-	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSWidgetWantsToUpdateOnLockScreen</key>
+	<true/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SpoqaHanSansNeo-Bold.otf</string>
@@ -23,6 +23,11 @@
 	<array>
 		<string>location</string>
 		<string>remote-notification</string>
+		<string>audio</string>
+		<string>fetch</string>
+		<string>processing</string>
 	</array>
+	<key>kTCCServiceMediaLibrary</key>
+	<string>앱에서 음악을 재생하고 관리하기 위한 권한이 필요합니다.</string>
 </dict>
 </plist>
