--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,4 @@ iOSInjectionProject/
 *.xcconfig
 
 # End of https://www.toptal.com/developers/gitignore/api/swift,xcode,macos
+BlueberrySmoothie/BlueBerrySmoothie/Resource/Blue Ribbons - TrackTribe.mp3
