--- a/BlueberrySmoothie/LiveActWidget/Info.plist
+++ b/BlueberrySmoothie/LiveActWidget/Info.plist
@@ -37,3 +37,10 @@
 
 <key>NSWidgetWantsToUpdateOnLockScreen</key>
 <true/>
+    
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>fetch</string>
+        <string>remote-notification</string>
+    </array>
+
